@@ -55,13 +55,12 @@ export default Browse;
 
 //todo: add filter
 //Dialog of the browse
-class Dialog extends React.Component<BrowseProps, { contenttype:string, shown: boolean, showTree:boolean, list: any, parent: number, selected: any,data:any,isAdding:Boolean}> {
+class Dialog extends React.Component<BrowseProps, { contenttype:string, shown: boolean, showTree:boolean, list: any, parent: number, selected: any,refreshCount:number}> {
 
-  constructor(props: any) {
+  constructor(props: BrowseProps) {
     super(props);
     this.state = { shown: props.trigger?true:false, contenttype:props.contenttype[0], showTree:false, list: '', parent: (this.props.parent||1), selected: props.selected,
-    data:props.data||[],
-    isAdding:true,
+    refreshCount:0,
   };
   }
 
@@ -169,20 +168,9 @@ class Dialog extends React.Component<BrowseProps, { contenttype:string, shown: b
       this.props.onConfirm(data);
     }
   }
-  uploaded(data:any){
-    console.log(data)
-    this.setState({data:data})
-  }
-
-  submitfile(state:any){
-    if(state==='1'){
-      this.setState({isAdding:false})
-    }
-    if(state==='2'){
-      this.setState({isAdding:true})
-      this.setState({data:[]})
-    }
-  }
+  uploaded(selectedData:any){
+    this.setState({selected:selectedData})
+  }  
 
   renderBody(){
     let browseList = util.getViewSettings(this.state.contenttype).browselist;
@@ -207,13 +195,16 @@ class Dialog extends React.Component<BrowseProps, { contenttype:string, shown: b
           <a href="#" onClick={(e:any)=>{e.preventDefault();this.setState({showTree:!this.state.showTree});}}>
             <i className={this.state.showTree?"fas fa-chevron-left":"fas fa-chevron-right"}></i>
           </a>
-          {this.state.isAdding&&<List id={this.state.parent} {...browseList} key={this.state.parent+this.state.contenttype} onRenderRow={(content:any)=>this.selectedRowClass(content)} contenttype={this.state.contenttype} level={100} onLinkClick={(content) => this.select(content)} />}
+          <List id={this.state.parent} {...browseList} key={this.state.parent+this.state.contenttype+this.state.refreshCount} onRenderRow={(content:any)=>this.selectedRowClass(content)} contenttype={this.state.contenttype} level={100} onLinkClick={(content) => this.select(content)} />
           {util.browseAfterList&&util.browseAfterList({
-            content_type:'image',
-            data:this.state.data,
+            contenttype:this.state.contenttype,
             parent:this.state.parent,
-            onSuccess:(data)=>{this.uploaded(data)},
-            onSubmit:(state)=>{this.submitfile(state)}
+            refresh:(selectedData)=>{
+              if(selectedData){
+                this.setState({selected:selectedData});
+              }
+              this.setState({refreshCount: this.state.refreshCount+1})
+            },
           })}
         </div>
       </div>
